<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutAppFragment"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/aboutAppHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/aboutAppHead" />

    <TextView
        android:id="@+id/aboutApp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/aboutAppHeader"
        android:text="@string/about_app" />

    <TextView
        android:id="@+id/aboutApp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/aboutApp1"
        android:text="@string/about_app1" />

    <TextView
        android:id="@+id/aboutApp3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorAccent"
        android:text="@string/about_app2"
        android:layout_below="@id/aboutApp2"/>

    <TextView
        android:id="@+id/aboutApp4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorAccent"
        android:text="@string/about_app3"
        android:layout_below="@id/aboutApp3"/>

    <TextView
        android:id="@+id/aboutApp5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorAccent"
        android:text="@string/about_app4"
        android:layout_below="@id/aboutApp4"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutApp5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorWhite"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
        android:entries="@array/about_app_top"
        android:padding="5dp">

    </ListView>
</RelativeLayout>
</ScrollView>